--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "PowerOf2",
+            "request": "launch",
+            "mainClass": "Leetcode.PowerOf2",
+            "projectName": "DSA_5ffdb5de"
+        },
+        {
+            "type": "java",
             "name": "ReverseInteger",
             "request": "launch",
             "mainClass": "Leetcode.ReverseInteger",
